fix: add gap to side panel list item (#1001)

--- a/sites/public/src/components/account/ApplicationsView.module.scss
+++ b/sites/public/src/components/account/ApplicationsView.module.scss
@@ -41,6 +41,7 @@
 .application-count-tab {
   display: flex;
   justify-content: space-between;
+  gap: var(--seeds-s4);
 }
 
 .application-hide-tab {
